tests/negative/typechecker_bad1.sp
(* Non existent type *)

Var: Float;

main: Int () {
    return 0;
}